<resources>
    <string name="app_name">Moje Appki</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="draw">Rysowanie</string>
    <string name="game">Gra</string>
    <string name="flague">Flaga</string>
    <string name="gallery">Galeria</string>
    <string name="open_url">Otwieranie strony URL</string>
    <string name="clear">Wyczyść!</string>
    <string name="blue">Niebieski</string>
    <string name="red">Czerwony</string>
    <string name="save">Zapisz</string>
    <string name="back">Wróć</string>
    <string name="second_player">Drugi gracz</string>
    <string name="first_player">Pierwszy gracz</string>
    <string name="start">Start</string>
    <string name="draw_game">Gra obrazkowa</string>
    <string name="draw_app">Rysuj!</string>
    <string name="erase">Usuń</string>
    <string name="todo_list">Lista Zadań</string>
    <string name="add">Dodaj</string>
    <string name="checked_items">%d items</string>
    <string name="quiz">Quiz</string>
    <string name="library">Biblioteka</string>
    <string name="read">Przeczytana</string>
    <string name="fortunetale">Wróżby</string>
    <string name="fortune_grzes">Szedł Grześ przez wieś</string>
    <string name="fortune_prolog">Potrząśnij lub dotknij, żeby zobaczyć wróżbę</string>
    <string name="notes">Notatki:</string>
    <string name="notes_hint">To możesz zapisać swoje notatki</string>
    <string name="Green">niebieski</string>
    <string name="black">Czarny</string>
    <string name="main_menu">Menu główne</string>

    <plurals name="checked_items_plural">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

</resources>