<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <Button
        android:id="@+id/player_one_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:rotation="180"
        android:text="@string/first_player" />

    <LinearLayout
        android:id="@+id/lin_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:weightSum="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/first_drawing"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/auta"/>

        <ImageView
            android:id="@+id/second_drawing"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/auto"/>
    </LinearLayout>


    <Button
        android:id="@+id/player_two_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/second_player" />
    <Button
        android:id="@+id/start_button"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"/>
    <TextView
        android:id="@+id/intro_text_view"
        tools:text="3"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100sp"/>
</RelativeLayout>
